# Agentic-Doc-Extraction

./: README.md  pyproject.toml
ocr/: document-processing-with-ocr.py
