[project]
name = "agentic-doc-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Montero",email = "ejmontero10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
